Make buttons wrap at wider width to prevent overflow

--- a/src/assets/styles/themes/ix-blue.scss
+++ b/src/assets/styles/themes/ix-blue.scss
@@ -741,3 +741,18 @@ vm-table .ngx-datatable .datatable-body {
   text-align: left !important;
   padding-left: 10px;
 }
+
+// Keeps buttons on UI prefs form from overflowing page
+@media (min-width: 600px) and (max-width:715px) {
+  .prefs-form button {
+    display: block;
+    margin-bottom: 10px !important;
+  }
+}
+
+// Adds space above Manage Themes section in 1 col view on UI Pref
+@media (max-width: 599px) {
+  custom-theme-manager-form {
+    margin-top: 30px !important;
+  }
+}
